# zygisk-module-template

./: README.md  build.gradle.kts  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle.kts
module/jni/: Android.mk
module/src/main/cpp/: Android.mk  CMakeLists.txt
module/template/: customize.sh
